# CVlabs

./: .gitignore  Cronogram.ods  README.md
Week1 - Get started/1-Getting Started/alpha_channel/: CMakeLists.txt  main.cpp
Week1 - Get started/2-Basic Image Operations/copy/: CMakeLists.txt
Week1 - Get started/7-Qrcode detector/assignment/: CMakeLists.txt
Week1/bitwise/: main.cpp
Week1/qrcode detector/: CMakeLists.txt  main.cpp
Week1/sunglass filter/: CMakeLists.txt
Week2 - Video io and gui/Read video/: CMakeLists.txt
Week2 - Video io and gui/homework 1/: CMakeLists.txt  submission.cpp
Week2/Read video/: main.cpp
Week2/homework 1/: CMakeLists.txt
Week3 - Binary image processing/Morpho_operations/: CMakeLists.txt  main.cpp
Week3 - Binary image processing/Threshold/: CMakeLists.txt  main.cpp
Week3 - Binary image processing/assignment/: CMakeLists.txt  main.cpp
Week3 - Binary image processing/build-assignment-Desktop_Qt_5_12_2_GCC_64bit-Default/: CMakeCache.txt  Makefile  assignment  assignment.cbp  cmake_install.cmake
Week3 - Binary image processing/dilatation/: CMakeLists.txt  main.cpp
Week3 - Binary image processing/erosion/: CMakeLists.txt  main.cpp
week1/drawaline/: CMakeLists.txt  example  main.cpp
week1/qrcode/: CMakeLists.txt  example  main.cpp  qrdetector.cpp  qrdetector.h
week1/sunglasses/: .sunglasses.cpp.swp  CMakeCache.txt  CMakeLists.txt  compile_commands.json  sunglasses  sunglasses.cpp
week1/sunglasses2/: Makefile  cmake_install.cmake  compile_commands.json  sunglasses  sunglasses.cpp
(+55 files in other folders)
